# ral_2026

./: .gitignore  CMakeLists.txt  package.xml
include/ral_2026/: human_to_robot_handover.hpp
launch/: launch_stuff.launch.py
scripts/: sinusoidal_pose_publisher.py
src/: a.out  cubic_polynomial_solver.cpp  handover.cpp  human_to_robot_handover.cpp  human_to_robot_handover_v2.cpp  human_to_robot_handover_v3.cpp  object_state_estimation.cpp  test_eigen.cpp
